Initial support for module-info.test files
Move test-runtime related patch code into Patcher class.

Addresses #12