@@ -20,7 +20,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.function.IntSupplier;
@@ -114,7 +113,6 @@ class JUnitPlatformStarter implements IntSupplier {
   // Supply standard options for Java
   // https://docs.oracle.com/javase/10/tools/java.htm
   private void addJavaOptions(List<String> cmd) {
-    var testOutput = project.getBuild().getTestOutputDirectory();
     var mainModule = modules.getMainModuleReference();
     var testModule = modules.getTestModuleReference();
     cmd.addAll(mojo.getJavaOptions().getAdditionalOptions());
@@ -125,23 +123,7 @@ class JUnitPlatformStarter implements IntSupplier {
       cmd.add("--add-modules");
       cmd.add(createAddModulesArgument());
       if (mainModule.isPresent() && !testModule.isPresent()) {
-        var name = mainModule.get().descriptor().name();
-        cmd.add("--patch-module");
-        cmd.add(name + "=" + testOutput);
-        var addReads = createAddReadsModules();
-        addReads.forEach(
-            module -> {
-              cmd.add("--add-reads");
-              cmd.add(name + "=" + module);
-            });
-        for (var module : createAddOpensModules()) {
-          // iterate all packages, "name/*" is not possible due to
-          // http://mail.openjdk.java.net/pipermail/jigsaw-dev/2017-January/010749.html
-          for (var pack : mainModule.get().descriptor().packages()) {
-            cmd.add("--add-opens");
-            cmd.add(name + "/" + pack + "=" + module);
-          }
-        }
+        new Patcher(mojo).patch(cmd);
       }
       cmd.add("--module");
       cmd.add("org.junit.platform.console");
@@ -194,44 +176,6 @@ class JUnitPlatformStarter implements IntSupplier {
       default:
         return modules.getTestModuleReference().orElseThrow().descriptor().name();
     }
-  }
-
-  private List<String> createAddOpensModules() {
-    var value = mojo.getJavaOptions().getAddOpens();
-    if (value != null) {
-      return value;
-    }
-    var modules = new ArrayList<String>();
-    var map = project.getArtifactMap();
-    if (map.containsKey("org.junit.platform:junit-platform-commons")) {
-      modules.add("org.junit.platform.commons");
-    }
-    return modules;
-  }
-
-  private List<String> createAddReadsModules() {
-    var value = mojo.getJavaOptions().getAddReads();
-    if (value != null) {
-      return value;
-    }
-    var modules = new ArrayList<String>();
-    var map = project.getArtifactMap();
-    // Jupiter
-    if (map.containsKey("org.junit.jupiter:junit-jupiter-api")) {
-      modules.add("org.junit.jupiter.api");
-    }
-    if (map.containsKey("org.junit.jupiter:junit-jupiter-params")) {
-      modules.add("org.junit.jupiter.params");
-    }
-    if (map.containsKey("org.junit.jupiter:junit-jupiter-migrationsupport")) {
-      modules.add("org.junit.jupiter.migrationsupport");
-    }
-    // JUnit 3/4
-    if (map.containsKey("junit:junit")) {
-      modules.add("junit");
-    }
-
-    return modules;
   }
 
   private static String createConfigArgument(String key, String value) {
